--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,23 @@
 <html>
   <head>
     <title>Angular 2 QuickStart</title>
-    <script src="https://code.angularjs.org/tools/system.js"></script>
-    <script src="https://code.angularjs.org/tools/typescript.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
-    <script src="scripts/init.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
-    <my-app>loading...</my-app>
+    <script src="https://use.typekit.net/vly1fpc.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script>
+    <script>
+    try{Typekit.load({ async: true });}catch(e){}
+    System.config({
+      defaultJSExtensions: true
+    });
+    </script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.44/router.dev.js"></script>
+    <rooms>loading...</rooms>
+    <script>
+    System.import('rooms');
+    </script>
   </body>
 </html>
