--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Rooms</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/base.css" />
   </head>
@@ -15,7 +15,7 @@
     </script>
     <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.44/router.dev.js"></script>
-    <rooms>loading...</rooms>
+    <rooms></rooms>
     <script>
     System.import('rooms');
     </script>
