--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,7 +15,58 @@
     <script>
     try{Typekit.load({ async: true });}catch(e){}
     System.config({
-      defaultJSExtensions: true
+      defaultJSExtensions: true,
+      transpiler: "typescript",
+      paths: {
+        "github:*": "jspm_packages/github/*",
+        "npm:*": "jspm_packages/npm/*"
+      },
+
+      map: {
+        "lodash": "npm:lodash@3.10.1",
+        "rxjs": "npm:rxjs@5.0.0-alpha.12",
+        "typescript": "npm:typescript@1.7.3",
+        "github:jspm/nodelibs-assert@0.1.0": {
+          "assert": "npm:assert@1.3.0"
+        },
+        "github:jspm/nodelibs-buffer@0.1.0": {
+          "buffer": "npm:buffer@3.5.4"
+        },
+        "github:jspm/nodelibs-process@0.1.2": {
+          "process": "npm:process@0.11.2"
+        },
+        "github:jspm/nodelibs-util@0.1.0": {
+          "util": "npm:util@0.10.3"
+        },
+        "npm:assert@1.3.0": {
+          "util": "npm:util@0.10.3"
+        },
+        "npm:buffer@3.5.4": {
+          "base64-js": "npm:base64-js@0.0.8",
+          "child_process": "github:jspm/nodelibs-child_process@0.1.0",
+          "fs": "github:jspm/nodelibs-fs@0.1.2",
+          "ieee754": "npm:ieee754@1.1.6",
+          "isarray": "npm:isarray@0.0.1",
+          "process": "github:jspm/nodelibs-process@0.1.2"
+        },
+        "npm:inherits@2.0.1": {
+          "util": "github:jspm/nodelibs-util@0.1.0"
+        },
+        "npm:lodash@3.10.1": {
+          "process": "github:jspm/nodelibs-process@0.1.2"
+        },
+        "npm:process@0.11.2": {
+          "assert": "github:jspm/nodelibs-assert@0.1.0"
+        },
+        "npm:rxjs@5.0.0-alpha.12": {
+          "buffer": "github:jspm/nodelibs-buffer@0.1.0",
+          "process": "github:jspm/nodelibs-process@0.1.2"
+        },
+        "npm:util@0.10.3": {
+          "inherits": "npm:inherits@2.0.1",
+          "process": "github:jspm/nodelibs-process@0.1.2"
+        }
+      }
     });
     </script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
@@ -23,7 +74,7 @@
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <rooms></rooms>
     <script>
-    System.import('rooms');
+    System.import('app');
     </script>
   </body>
 </html>
