--- a/client/app/index.html
+++ b/client/app/index.html
@@ -26,6 +26,7 @@
         "lodash": "npm:lodash@3.10.1",
         "rxjs": "npm:rxjs@5.0.0-alpha.12",
         "typescript": "npm:typescript@1.7.3",
+        "socket.io-client": "github:socketio/socket.io-client@1.3.7",
         "github:jspm/nodelibs-assert@0.1.0": {
           "assert": "npm:assert@1.3.0"
         },
