--- a/client/app/index.html
+++ b/client/app/index.html
@@ -25,6 +25,7 @@
       map: {
         "lodash": "npm:lodash@3.10.1",
         "rxjs": "npm:rxjs@5.0.0-alpha.12",
+        "moment": "npm:moment@2.10.6",
         "typescript": "npm:typescript@1.7.3",
         "socket.io-client": "github:socketio/socket.io-client@1.3.7",
         "github:jspm/nodelibs-assert@0.1.0": {
