--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,12 +2,12 @@
   <head>
     <title>R</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="vendor/jquery-ui.css">
     <link rel="stylesheet" href="vendor/timepicker.css">
   </head>
   <body>
-    <script src="https://use.typekit.net/vly1fpc.js"></script>
+    <!-- <script src="https://use.typekit.net/vly1fpc.js"></script> -->
     <script src="node_modules/underscore/underscore-min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -16,7 +16,7 @@
     <script src="vendor/jquery-timepicker.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-    try{Typekit.load({ async: true });}catch(e){}
+    // try{Typekit.load({ async: true });}catch(e){}
     System.config({
       defaultJSExtensions: true,
       transpiler: "typescript",
