--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,12 +2,12 @@
   <head>
     <title>R</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/jquery-ui.css">
     <link rel="stylesheet" href="vendor/timepicker.css">
   </head>
   <body>
-    <!-- <script src="https://use.typekit.net/vly1fpc.js"></script> -->
+    <script src="https://use.typekit.net/vly1fpc.js"></script>
     <script src="node_modules/underscore/underscore-min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -15,8 +15,9 @@
     <script src="vendor/jquery-ui-touch.js"></script>
     <script src="vendor/jquery-timepicker.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="vendor/bootstrap-popover-fix.js"></script>
     <script>
-    // try{Typekit.load({ async: true });}catch(e){}
+    try{Typekit.load({ async: true });}catch(e){}
     System.config({
       defaultJSExtensions: true,
       transpiler: "typescript",
@@ -27,15 +28,16 @@
 
       map: {
         "lodash": "npm:lodash@3.10.1",
-        "rxjs": "npm:rxjs@5.0.0-alpha.12",
         "moment": "npm:moment@2.10.6",
-        "typescript": "npm:typescript@1.7.3",
+        "reflect-metadata": "npm:reflect-metadata@0.1.2",
+        "rxjs": "npm:rxjs@5.0.0-beta.0",
         "socket.io-client": "github:socketio/socket.io-client@1.3.7",
+        "typescript": "npm:typescript@1.7.3",
         "github:jspm/nodelibs-assert@0.1.0": {
           "assert": "npm:assert@1.3.0"
         },
         "github:jspm/nodelibs-buffer@0.1.0": {
-          "buffer": "npm:buffer@3.5.4"
+          "buffer": "npm:buffer@3.5.5"
         },
         "github:jspm/nodelibs-process@0.1.2": {
           "process": "npm:process@0.11.2"
@@ -46,12 +48,12 @@
         "npm:assert@1.3.0": {
           "util": "npm:util@0.10.3"
         },
-        "npm:buffer@3.5.4": {
+        "npm:buffer@3.5.5": {
           "base64-js": "npm:base64-js@0.0.8",
           "child_process": "github:jspm/nodelibs-child_process@0.1.0",
           "fs": "github:jspm/nodelibs-fs@0.1.2",
           "ieee754": "npm:ieee754@1.1.6",
-          "isarray": "npm:isarray@0.0.1",
+          "isarray": "npm:isarray@1.0.0",
           "process": "github:jspm/nodelibs-process@0.1.2"
         },
         "npm:inherits@2.0.1": {
@@ -60,10 +62,17 @@
         "npm:lodash@3.10.1": {
           "process": "github:jspm/nodelibs-process@0.1.2"
         },
+        "npm:moment@2.10.6": {
+          "process": "github:jspm/nodelibs-process@0.1.2"
+        },
         "npm:process@0.11.2": {
           "assert": "github:jspm/nodelibs-assert@0.1.0"
         },
-        "npm:rxjs@5.0.0-alpha.12": {
+        "npm:reflect-metadata@0.1.2": {
+          "assert": "github:jspm/nodelibs-assert@0.1.0",
+          "process": "github:jspm/nodelibs-process@0.1.2"
+        },
+        "npm:rxjs@5.0.0-beta.0": {
           "buffer": "github:jspm/nodelibs-buffer@0.1.0",
           "process": "github:jspm/nodelibs-process@0.1.2"
         },
@@ -74,12 +83,14 @@
       }
     });
     </script>
-    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="node_modules/angular2/bundles/http.dev.js"></script>
-    <script src="node_modules/angular2/bundles/router.dev.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.min.js"></script>
+    <script src="node_modules/angular2/bundles/http.min.js"></script>
+    <script src="node_modules/angular2/bundles/router.min.js"></script>
+    <script src="node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
     <rooms></rooms>
     <script>
-    System.import('app');
+    System.import('app')
+      .then(null, console.error.bind(console));;
     </script>
   </body>
 </html>
