Working on Hybrid

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -110,6 +110,7 @@
     <script src="node_modules/socket.io-client/socket.io.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.min.js"></script>
     <script src="node_modules/ionic-framework/bundles/ionic.system.js"></script>
+    <script src="node_modules/lodash/index.js"></script>
     <script src="node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
